<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:theme="@style/AppTheme"
    tools:context=".GuessActivity">


    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/timer"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_timer"
            android:gravity="center"
            android:text="@string/timer"
            android:textColor="#ee4d02"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/scoreView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/score_container"
            app:srcCompat="@drawable/ic_star_black_24dp" />

        <TextView
            android:id="@+id/scoreCounter"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="85dp"
            android:background="#f8eaae"
            android:gravity="center"
            android:text="@string/score_counter"
            android:textSize="36sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/guess"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="4dp"
        android:background="#00d598"
        android:gravity="center"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:text="@string/guess"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:background="#f4dc7a"
        android:elevation="4dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/question"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="34dp"
        android:background="#ffa624"
        android:onClick="onClick"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/next"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="426dp" />

    <Button
        android:id="@+id/answer_one"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="50dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/answer_one"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/answer_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <Button
        android:id="@+id/answer_two"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="50dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/answer_two"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/answer_three"
        app:layout_constraintStart_toEndOf="@+id/answer_one"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <Button
        android:id="@+id/answer_three"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/answer_three"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/answer_two"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <TextView
        android:id="@+id/play"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/play"
        android:elevation="16dp"
        android:gravity="center"
        android:onClick="onClick"
        android:padding="50dp"
        android:text="@string/play"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#f49f7a"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/answer_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/score_container"
                android:src="@drawable/ic_emoji_events_24px" />

            <TextView
                android:id="@+id/highest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/highest"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View style="@style/Divider" />

            <TextView
                android:id="@+id/total_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/total_score"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/score_container"
                android:src="@drawable/ic_sentiment_dissatisfied_black_24dp" />

            <Button
                android:id="@+id/playAgain"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:background="#95ab23"
                android:onClick="onClick"
                android:text="@string/play_again"
                android:textColor="#fff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/quit"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:background="#e75f1a"
                android:onClick="onClick"
                android:text="@string/quit"
                android:textColor="#fff"
                android:textSize="24sp" />


        </LinearLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>